Fixed ticket spacing

--- a/css/style.css
+++ b/css/style.css
@@ -145,8 +145,8 @@ header{
 }
 
 .tito-ticket {
-	/*margin-bottom:10px;*/
-	line-height:2.1em;
+	margin-bottom:5px;
+	line-height:1.5em;
 }
 
 .tito-ticket-description {
